<resources>
    <string name="app_name">opinion</string>
    <string name="company">中国移动通信集团山西有限公司</string>
    <string name="loginName">用户名</string>
    <string name="loginTime">登录时间</string>
    <string name="loginNameInput">请输入用户名</string>
    <string name="passwdInput">请输入密码</string>
    <string name="loginErrorNull">用户名或密码不能为空！</string>
    <string name="loginTip">正在登录，请等待……</string>
    <string name="netError">网络异常</string>
    <string name="tokenIdInvalidationError">距离上次访问时间过长，需要重新登录！</string>
    <string name="loginError">很抱歉，用户名或密码错误!</string>
    <string name="tabTopText">公文系统</string>
    <string name="commomOpinion">常用意见</string>
    <string name="commomOpinionLinkPersonContact">审批意见:</string>
    <string name="fillOpinionPrivious">上一步</string>
    <string name="fillOpinionNext"> 确   定  </string>
    <string name="fillOpinionMutiLink"> 结   束  </string>
    <string name="fillOpinionCommit"> 提 交 </string>
    <string name="fillOpinionGuideSelect">确认无误后，请单击选择</string>
    <string name="fillOpinionGuide">确认无误后，请单击提交</string>
    <string name="fillOpinionConfirmSelect"> 选 择 </string>
    <string name="tagName">[处理人]</string>
    <string name="tagOpinion">[意见]</string>
    <string name="tagDepartment">[部门]</string>
    <string name="tagTime">[时间]</string>
    <string name="tagTime_contract_account">[委托时间]</string>
    <string name="tagManageLink">[处理环节]</string>
    <string name="tagStatu">[状态]</string>
    <string name="tagComeTime">[接收时间]</string>
    <string name="tagDoneTime">[完成时间]</string>
    <string name="tagUrl">[提交路径]</string>
    <string name="tagNext">[后续处理环节]</string>
    <string name="selectAllPerson">全选</string>
    <string name="selectAllAttachment">全选</string>
    <string name="downloadAttachment">附件下载</string>
    <string name="download">下载</string>
    <string name="cancel">取消</string>
    <string name="submitfail">很抱歉，提交失败！</string>
    <string name="submitSuccess">提交成功！</string>
    <string name="linkTitle">[标题]</string>
    <string name="linkSelect">[环节选择]</string>
    <string name="selectOpinionGuide">请填写您的意见！</string>
    <string name="selectLinkGuide">请选择环节！</string>
    <string name="deleteSelectPerson">  删  除  </string>
    <string name="deleteSelectPersonSuccess">删除成功！</string>
    <string name="selectedPerson">已选择人员:</string>
    <string name="selectedPersonDefault">默认选择人员</string>
    <string name="selectPersonGuide">请选择人员！</string>
    <string name="seeSelectPersonCounterSignGuide">查看已选人员</string>
    <string name="currentDepartmentGuide">当前部门:</string>
    <string name="returnPreviousDepartmentGuide">上一级部门</string>
    <string name="selectingDepartmentGuide">可选择部门:</string>
    <string name="selectingPersonGuide">可选择人员:</string>
    <string name="loading">加载中……</string>
    <string name="newsTime">发布时间：</string>
    <string name="newsSource">文章来源：</string>
    <string name="newsCount">点击量：</string>
    <string name="updateSoftware">软件更新提示</string>
    <string name="updateSoftwareTip">发现新版本，是否更新</string>
    <string name="updatingSoftware">更新</string>
    <string name="quitUpdateSoftware">退出</string>
    <string name="noData">暂无数据</string>
    <string name="openAttachmentPath">打开</string>
    <string name="noFillOpinion">尚未填写意见，请先填写意见</string>
    <string name="mutilinkSelect"> 继 续  </string>
    <string name="noListDownload">当前为最后一页</string>
    <string name="selectPersonLinkPersonContact">选择人员</string>
    <string name="updateContactsDiaolog">关闭</string>
    <string name="contacts_pritype">pritype</string>
    <string name="contacts_loginName">登录名</string>
    <string name="contacts_cardNo">工号</string>
    <string name="contacts_weight">weight</string>
    <string name="contacts_path">path</string>
    <string name="contacts_email">电子邮件</string>
    <string name="contacts_mobile">手机号码</string>
    <string name="contacts_phone">电话号码</string>
    <string name="contacts_description">description</string>
    <string name="contacts_rtxId">rtxId</string>
    <string name="contacts_photo">photo</string>
    <string name="contacts_levelGroupId">levelGroupId</string>
    <string name="contacts_org">部门</string>
    <string name="email_title">主&#160;&#160;&#160;&#160;题：</string>
    <string name="email_sender">发件人：</string>
    <string name="email_receiver">收件人：</string>
    <string name="email_cc">抄&#160;&#160;&#160;&#160;送：</string>
    <string name="email_time">时&#160;&#160;&#160;&#160;间：</string>
    <string name="email_content">正文：</string>
    <string name="email_attachment">附件：</string>
    <string name="frequentlyLinkman">常用联系人</string>
    <string name="show">显示</string>
    <string name="hide">隐藏</string>
    <string name="ok">确定</string>
    <string name="wifiError">无线网络异常，请检查无线网络！</string>
    <string name="loginLock">亲爱的同事，您已经连续十次输入了错误的用户名和密码，出于信息安全考虑，您的帐号已被系统禁止使用，请使用电脑登录portal并点击“初始化密码”按钮修改密码后重新登录！</string>
    <string name="loginLocked">亲爱的同事，您已经连续十次输入了错误的用户名和密码，出于信息安全考虑，您的帐号已被系统禁止使用，请使用电脑登录portal并点击“初始化密码”按钮修改密码后重新登录！</string>
    <string name="search">搜索</string>
    <string name="contacts_vpmn">VPMN</string>
    <!-- 通讯录人员列表页面提示进入人员详细页面 -->
    <string name="contacts_personDetailTip">温馨提示：长按姓名可看见人员详情</string>
    <!-- 通讯录搜索页面 -->
    <string name="contacts_personSearch">搜索</string>
    <!-- 问卷调查内容页面 -->
    <string name="survey_front">上一题</string>
    <string name="survey_save">保存</string>
    <string name="survey_goto">跳转</string>
    <string name="survey_sub">提交</string>
    <string name="survey_next">下一题</string>
    <string name="table_ann">备注 : 白底红字是未做，灰底黑字是已做，灰底蓝字是隐藏题目。</string>
    <!-- 移动办公网址推送 -->
    <string name="website_receive">多个手机号之间用"\","\"隔开</string>
    <!-- 移动办公网址推送 -->
    <string name="exit">退出</string>
    <string name="setting">设置</string>
    <!-- 薪酬系统 -->
    <string name="reminder">温馨提示：</string>
    <string name="reminder_info">验证码10分钟内有效。</string>
    <string name="send_varifycode">点击获取验证码</string>
    <string name="varifycode">请输入验证码</string>
    <string name="next_action">下一步</string>
    <string name="query_salary">选择查询日期</string>
    <!-- 主页-->
    <string name="new_index">温馨提示：可通过长按图标来调整各应用的位置。</string>
    <string name="new_more">温馨提示：长按应用，选择后可添加至首页。</string>

    <!--手势密码-->
    <string name="lockscreen_access_pattern_cell_added">"已添加单元格"</string>
    <string name="lockscreen_access_pattern_start">"开始绘制图案"</string>
    <string name="lockscreen_access_pattern_cleared">"图案已清除"</string>
    <string name="lockscreen_access_pattern_detected">"图案绘制完成"</string>
    <string name="lockpattern_recording_intro_header">"请设置或修改手势密码图案"</string>
    <string name="lockpattern_settings_help_how_to_record">"如何绘制解锁图案"</string>
    <string name="lockpattern_recording_incorrect_too_short">"至少连接4个点，请重试"</string>
    <string name="lockpattern_pattern_entered_header">"图案已记录"</string>
    <string name="lockpattern_need_to_confirm">"请再次设置手势密码图案"</string>
    <string name="lockpattern_need_to_unlock_wrong">"与上次输入不一致，请重试"</string>
    <string name="lockpattern_pattern_confirmed_header">"确认保存新解锁图案"</string>
    <string name="lockpattern_recording_inprogress">"完成后松开手指"</string>
    <!--工单公文中的常用-->
    <string name="common_per">"常用候选人"</string>


</resources>
