<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:baselineAligned="false"
    android:orientation="vertical" >

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="0dp"
        android:layout_weight="9.8"
        android:background="#ffffff"
        android:orientation="vertical" >

        <LinearLayout
            android:id="@+id/selectedPersonLayoutC"
            android:layout_width="fill_parent"
            android:layout_height="0dp"
            android:layout_weight="3"
            android:background="#ffffff"
            android:orientation="vertical"
            android:paddingLeft="15dip"
            android:visibility="gone" >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="0dip"
                android:layout_weight="1"
                android:text="@string/selectedPerson"
                android:textColor="#ff000000"
                android:textSize="16sp" />

            <ScrollView
                android:layout_width="fill_parent"
                android:layout_height="0dip"
                android:layout_weight="2"
                android:background="#ffffff" >

                <LinearLayout
                    android:id="@+id/selectedPersonLayoutViewC"
                    android:layout_width="fill_parent"
                    android:layout_height="fill_parent"
                    android:background="#ffffff"
                    android:orientation="vertical"
                    android:paddingLeft="15dip"
                    android:scrollbars="vertical" >
                </LinearLayout>
            </ScrollView>

            <Button
                android:id="@+id/deletePersonC"
                android:layout_width="wrap_content"
                android:layout_height="0dip"
                android:layout_gravity="right"
                android:layout_weight="1.5"
                android:text="@string/deleteSelectPerson"
                android:textColor="#ff000000"
                android:textSize="16sp" />

            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="1dip"
                android:background="#000000" >
            </LinearLayout>
        </LinearLayout>

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="0dp"
            android:layout_weight="7"
            android:background="#ffffff"
            android:orientation="vertical"
            android:paddingBottom="10dip"
            android:paddingLeft="15dip"
            android:paddingRight="15dip"
            android:paddingTop="10dip" >

            <LinearLayout
                android:id="@+id/defaultSelectPersonnelLayout"
                android:layout_width="fill_parent"
                android:layout_height="0dp"
                android:layout_weight="3"
                android:background="#ffffff"
                android:orientation="vertical"
                android:visibility="gone" >

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="0dp"
                    android:layout_weight="1"
                    android:text="@string/selectedPersonDefault"
                    android:textColor="#ff000000"
                    android:textSize="16sp" />

                <LinearLayout
                    android:layout_width="fill_parent"
                    android:layout_height="1dip"
                    android:background="#000000" >
                </LinearLayout>


            </LinearLayout>

            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:background="#ffffff"
                android:orientation="horizontal"
                android:paddingTop="2dip" >

                <ImageView
                    android:id="@+id/selectPersonnelImg"
                    android:layout_width="0dip"
                    android:layout_height="fill_parent"
                    android:layout_weight="2"
                    android:src="#000000" />

                <TextView
                    android:id="@+id/tip"
                    android:layout_width="0dip"
                    android:layout_height="fill_parent"
                    android:layout_weight="3"
                    android:gravity="center" />

                <TextView
                    android:id="@+id/select_ttttt"
                    android:layout_width="0dip"
                    android:layout_height="fill_parent"
                    android:layout_marginLeft="2dip"
                    android:layout_weight="0.8"
                    android:gravity="center"
                    android:text="@string/selectAllPerson" />

                <CheckBox
                    android:id="@+id/selectAllPerson"
                    android:layout_width="0dip"
                    android:layout_height="fill_parent"
                    android:layout_marginLeft="2dip"
                    android:layout_weight="0.8" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/selectPersonnelLayout"
                android:layout_width="fill_parent"
                android:layout_height="0dp"
                android:layout_weight="2.5"
                android:background="#ffffff"
                android:orientation="vertical" >

                <ListView
                    android:id="@+id/selectPersonnellv"
                    android:layout_width="fill_parent"
                    android:layout_height="fill_parent"
                    android:cacheColorHint="#00000000" >
                </ListView>
            </LinearLayout>
        </LinearLayout>
    </LinearLayout>

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="0dp"
        android:layout_weight="1.2"
        android:background="#a7c6da"
        android:gravity="center"
        android:orientation="horizontal"
        android:paddingRight="15dp" >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="#a7c6da"
            android:gravity="center"
            android:text="@string/fillOpinionGuideSelect"
            android:textColor="#ffffff"
            android:textSize="16sp"
            android:visibility="gone"
            />

        <Button
            android:id="@+id/returnSelectLinkCheckBox"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/fillOpinionPrivious"
            android:textColor="#000000"
            android:layout_marginLeft="15dip"
            android:layout_gravity="center_vertical"
            android:textSize="18sp" />

        <Button
            android:id="@+id/fillOpinionSelectC"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/fillOpinionConfirmSelect"
            android:textColor="#000000"
            android:layout_marginLeft="15dip"
            android:layout_gravity="center_vertical"
            android:textSize="18sp" />

        <Button
            android:id="@+id/fillOpinionCommitC"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:clickable="true"
            android:focusable="true"
            android:text="@string/fillOpinionCommit"
            android:textColor="#000000"
            android:layout_marginLeft="15dip"
            android:layout_gravity="center_vertical"
            android:textSize="18sp"
            android:visibility="gone"
            />
    </LinearLayout>

</LinearLayout>