<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:baselineAligned="false"
    android:orientation="vertical" >

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:background="#ffffff"
        android:orientation="horizontal"
        android:paddingLeft="10dip"
        android:paddingTop="5dip" >

        <ImageView
            android:id="@+id/selectPersonnelImg"
            android:layout_width="wrap_content"
            android:layout_height="fill_parent"
            android:src="@mipmap/personelselect" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/noSelectLayout"
        android:layout_width="fill_parent"
        android:layout_height="0dp"
        android:layout_weight="6.8"
        android:background="#ffffff"
        android:orientation="vertical"
        android:padding="20dip" >
    </LinearLayout>

    <LinearLayout
        android:id="@+id/noSelectSubmitTip"
        android:layout_width="fill_parent"
        android:layout_height="50dp"
        android:background="#a7c6da"
        android:gravity="center"
        android:paddingRight="15dp"
        android:orientation="horizontal"
        >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="#a7c6da"
            android:gravity="center"
            android:text="@string/fillOpinionGuide"
            android:textColor="#ffffff"
            android:textSize="16sp"
            android:visibility="gone" />

        <Button
            android:id="@+id/returnSelectLinkNoSelect"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/fillOpinionPrivious"
            android:textColor="#000000"
            android:layout_gravity="center_vertical"
            android:textSize="18sp" />

        <Button
            android:id="@+id/fillOpinionCommitNoSelect"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/fillOpinionCommit"
            android:textColor="#000000"
            android:layout_marginLeft="15dip"
            android:layout_gravity="center_vertical"
            android:textSize="18sp" />
    </LinearLayout>

</LinearLayout>