<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:baselineAligned="false"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:background="#ffffff"
        android:orientation="horizontal"
        android:paddingBottom="2dip"
        android:paddingLeft="10dip">

        <TextView
            android:id="@+id/quick"
            android:layout_width="0dip"
            android:layout_height="wrap_content"
            android:layout_weight="2"
            android:background="#e4e4e4"
            android:gravity="center"
            android:padding="6sp"
            android:text="快速选择专区"
            android:textColor="#ff000000"
            android:textSize="12sp"
            android:visibility="gone" />

        <TextView
            android:id="@+id/coutersign_common"
            android:layout_width="0dip"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10sp"
            android:layout_weight="2"
            android:background="#e4e4e4"
            android:gravity="center"
            android:padding="6sp"
            android:text="@string/common_per"
            android:textColor="#ff000000"
            android:textSize="12sp"
            android:visibility="gone" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="0dp"
        android:layout_weight="9"
        android:background="#ffffff"
        android:orientation="vertical">

        <!--当前部门-->
        <LinearLayout
            android:id="@+id/n_cur_dep"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"></LinearLayout>

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="1dip"
            android:background="#000000"
            android:paddingLeft="0dip"></LinearLayout>

        <LinearLayout
            android:id="@+id/selectingPersonCounterSignLayout"
            android:layout_width="fill_parent"
            android:layout_height="0dp"
            android:layout_weight="10"
            android:background="#ffffff"
            android:orientation="vertical"
            android:paddingLeft="10dip"
            android:paddingTop="5dip">

            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="30dip"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="0dip"
                    android:layout_height="fill_parent"
                    android:layout_weight="3"
                    android:gravity="left"
                    android:text="@string/selectingPersonGuide"
                    android:textColor="#ff285991"
                    android:textSize="16sp" />

                <CheckBox
                    android:id="@+id/selectingAllPersonCounterSign"
                    android:layout_width="0dip"
                    android:layout_height="fill_parent"
                    android:layout_marginRight="10dip"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:text="@string/selectAllPerson" />
            </LinearLayout>

            <TextView
                android:id="@+id/select_no_pers"
                android:layout_width="wrap_content"
                android:layout_height="25dip"
                android:gravity="center"
                android:text="暂时没有可选的人员"
                android:textColor="#ff285991"
                android:textSize="16sp"
                android:visibility="gone" />

            <ScrollView
                android:layout_width="fill_parent"
                android:layout_height="fill_parent"
                android:layout_marginLeft="10dip">

                <LinearLayout
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <!--选择人员-->
                    <LinearLayout
                        android:id="@+id/n_cou_selectingPersonCountSign"
                        android:layout_width="fill_parent"
                        android:layout_height="wrap_content"
                        android:orientation="vertical"></LinearLayout>

                    <!--可选择的部门-->
                    <LinearLayout
                        android:id="@+id/n_cou_dep"
                        android:layout_width="fill_parent"
                        android:layout_height="wrap_content"
                        android:orientation="vertical">

                        <ListView
                            android:id="@+id/n_cou_select_dep"
                            android:layout_width="fill_parent"
                            android:layout_height="match_parent"
                            android:cacheColorHint="#00000000"></ListView>
                    </LinearLayout>
                </LinearLayout>
            </ScrollView>
        </LinearLayout>
    </LinearLayout>

    <!-- <LinearLayout
         android:layout_width="fill_parent"
         android:layout_height="50dp"
         android:background="#a7c6da"
         android:gravity="center"
         android:orientation="horizontal" >

         <Button
             android:id="@+id/returnPreviousDepartmentCountSign"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_gravity="center_vertical"
             android:text="@string/returnPreviousDepartmentGuide"
             android:textColor="#000000"
             android:textSize="18sp"
             android:visibility="gone" />

         <Button
             android:id="@+id/returnSelectLinkCounter"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_gravity="center_vertical"
             android:text="@string/fillOpinionPrivious"
             android:textColor="#000000"
             android:textSize="18sp" />

         <Button
             android:id="@+id/fillOpinionSelectCountSign"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_gravity="center_vertical"
             android:layout_marginLeft="15dip"
             android:text="@string/fillOpinionConfirmSelect"
             android:textColor="#000000"
             android:textSize="18sp"
             android:visibility="gone" />

         <Button
             android:id="@+id/fillOpinionCommitCountSign"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_gravity="center_vertical"
             android:layout_marginLeft="15dip"
             android:text="@string/fillOpinionCommit"
             android:textColor="#000000"
             android:textSize="18sp"
             android:visibility="gone" />
     </LinearLayout>
 -->
</LinearLayout>